--- a/package.json
+++ b/package.json
@@ -9,8 +9,12 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@emotion/react": "^11.13.0",
+    "@emotion/styled": "^11.13.0",
+    "@mui/material": "^5.16.6",
     "eslint": "8.57.0",
     "eslint-config-next": "14.2.5",
+    "firebase": "^10.12.4",
     "next": "14.2.5",
     "react": "18.3.1",
     "react-dom": "18.3.1"
